--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -794,7 +794,7 @@ input[type="checkbox"] {
   background-size: cover;
   z-index: 3;
   position: relative;
-  
+  background-image:  linear-gradient( to left, rgba(0,0,0,0.1), rgba(0,0,0,0.1) ), url(../images/bg/all-bg.jpg);
 }
 
 @media only screen and (max-width: 767px), only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -12041,20 +12041,20 @@ ol {
 
 .contact-info.sytle-one .contact-list-item .content .main-content .text, .contact-info.style-two .contact-list-item .content .main-content .text {
   color: #d2a98e;
-  font-size: 34px;
+  font-size: 18px;
   font-weight: 700;
   line-height: 1.17;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 768px) and (max-width: 991px) {
   .contact-info.sytle-one .contact-list-item .content .main-content .text, .contact-info.style-two .contact-list-item .content .main-content .text {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .contact-info.sytle-one .contact-list-item .content .main-content .text, .contact-info.style-two .contact-list-item .content .main-content .text {
-    font-size: 24px;
+    font-size: 18px;
   }
 }
 
@@ -14203,8 +14203,8 @@ blockquote {
 }
 
 .banner-space {
-  padding-top: 195px;
-  padding-bottom: 204px;
+  padding-top: 140px;
+  padding-bottom: 120px;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
